--- a/static/sass/homepage.sass
+++ b/static/sass/homepage.sass
@@ -287,7 +287,7 @@ footer
           width: 100%
           padding: 0.7rem 1.5rem 0.3rem 1.5rem
           border-radius: 1.5rem 1.5rem 0 0
-          background-color: var(--background-color-card)
+          background-color: var(--black-5)
           height: 5.65rem
           
           
