add homepage auto insert function

--- a/templates/navbar.pug
+++ b/templates/navbar.pug
@@ -13,7 +13,7 @@ header
       #title CONNECT.
 
     form(action="{% url 'search' %}", method="GET") 
-      input(type="text", placeholder="Search", name="search")
+      input#search-insert(type="text", placeholder="Search", name="search")
       //- select#category(name="dropdown")
       //-   option(value='activity') 活動
       //-   option(value='user') 使用者
