add loading animation

--- a/templates/eventwindow.pug
+++ b/templates/eventwindow.pug
@@ -181,7 +181,7 @@ html
           #control-btns
             input#edit-btn(type="button", value="編輯活動")
             input#end-btn(type="button", value="結束活動")
-            input#delete-btn(type="button", value="取消活動")
+            input#delete-btn(type="button", value="刪除活動")
 
           script.
             $(document).ready(function(){
