--- a/static/sass/navbar.sass
+++ b/static/sass/navbar.sass
@@ -22,28 +22,26 @@
   /*UpLeft/UR/DR/DL
   z-index: 6
   
-  
-  #loadingfilter
-    display: block
-    position: fixed
-    top: 0
-    left: 0
-    width: 100%
-    height: 100%
-    backdrop-filter: blur(5px) contrast(70%) saturate(70%) brightness(70%)
-    -webkit-backdrop-filter: blur(5px) contrast(70%) saturate(70%) brightness(70%)
-    z-index: 6
-    
-  #loadinggif
-    display: block
-    position: fixed
-    transform: translate(-50%, -50%)
-    top: 45%
-    left: 50%
-    width: 7rem
-    height: 7rem
-    content: url("../file/connectloading.gif")
-    z-index: 7
+  #loading
+    z-index: 20
+    #loadingfilter
+      display: block
+      position: fixed
+      top: 0
+      left: 0
+      width: 100%
+      height: 100%
+      backdrop-filter: blur(5px) contrast(70%) saturate(70%) brightness(70%)
+      -webkit-backdrop-filter: blur(5px) contrast(70%) saturate(70%) brightness(70%)
+      
+    #loadinggif
+      display: block
+      position: fixed
+      transform: translate(-50%, -50%)
+      top: 45%
+      left: 50%
+      width: 5rem
+      height: 5rem
 
 a
   margin-left: 3%
