--- a/static/sass/homepage.sass
+++ b/static/sass/homepage.sass
@@ -200,6 +200,17 @@ footer
       align-items: flex-start
       margin: 0 3rem
       margin-bottom: 7rem
+      .search-info
+        margin-left: 1rem
+        color: var(--fontcolor-third)
+        font-size: 0.9rem
+      hr
+        width: 100%
+        flex-grow: 1
+        margin-top: 0.5rem
+        margin-left: 2rem
+        border: 0
+        border-top: 1px solid var(--black-5)
       
       a
         margin: 1.45rem
