change event msg representation, fix member typo

--- a/static/sass/eventwindow.sass
+++ b/static/sass/eventwindow.sass
@@ -395,6 +395,7 @@ input[type='button']:active
           #lt
             font-size: 0.85rem
             color: var(--black-2)
+            margin-bottom: 0.1rem
         #part-m
           display: flex;
           align-items: center;
@@ -404,6 +405,7 @@ input[type='button']:active
           #mt
             font-size: 0.85rem
             color: var(--black-2)
+            margin-bottom: 0.1rem
  
       .login-redirect
         position: relative
