--- a/static/sass/homepage.sass
+++ b/static/sass/homepage.sass
@@ -28,6 +28,26 @@ footer
   p
     font-size: 1vw
 
+#loading
+  display: block
+  position: fixed
+  top: 0
+  left: 0
+  width: 100%
+  height: 100%
+  backdrop-filter: blur(2px) contrast(80%) saturate(90%) brightness(90%);
+  -webkit-backdrop-filter: blur(5px) contrast(70%) saturate(70%) brightness(70%)
+  z-index: 8
+    
+  #loadinggif
+    display: block
+    position: fixed
+    transform: translate(-50%, -50%)
+    top: 45%
+    left: 50%
+    width: 5rem
+    height: 5rem
+    
 #phoneerrormsg
   display: none
   position: fixed
@@ -72,6 +92,7 @@ footer
   bottom: 0%
   background:rgba(0,255,204,0)
   margin: 5rem auto 5rem auto
+  z-index: 0
 
   #create
     display: flex
@@ -146,9 +167,8 @@ footer
     //rgba(255, 219, 208, 1)
     border: solid 0.2rem var(--border-color-container)
     width: 100%
-    
     border-radius: 1.5rem
-    z-index: 0
+    
     #divider
       display: flex
       flex-direction: row
