--- a/templates/homepage.pug
+++ b/templates/homepage.pug
@@ -21,6 +21,8 @@ html
   {% include 'navbar.pug' %}
 
   body
+    #loading
+      img#loadinggif(src="{% static 'file/connectloading.gif' %}")
     #phoneerrormsg
       //#errorlogo
       p 尚未針對窄螢幕優化
@@ -195,6 +197,9 @@ html
           {% endif %}
           script.
             $('#eventboard a.event-a').on("click", function() {
+              $("#loading").show()
+              $("#loading").animate({'opacity': 1}, 200, function() {
+              })
               $('#eventwindow').attr('class', this.id)
               event_handler(
                 "/event/" + this.id, 
