--- a/static/sass/profile.sass
+++ b/static/sass/profile.sass
@@ -47,7 +47,26 @@ footer
   width: 100%
   p
     font-size: 1rem
-  
+
+#loading
+  display: block
+  position: fixed
+  top: 0
+  left: 0
+  width: 100%
+  height: 100%
+  backdrop-filter: blur(2px) contrast(80%) saturate(90%) brightness(90%);
+  -webkit-backdrop-filter: blur(5px) contrast(70%) saturate(70%) brightness(70%)
+  z-index: 8
+    
+  #loadinggif
+    display: block
+    position: fixed
+    transform: translate(-50%, -50%)
+    top: 45%
+    left: 50%
+    width: 5rem
+    height: 5rem
   
 #phoneerrormsg
   display: none
