modify profile tag comment user-hover

--- a/templates/profile.pug
+++ b/templates/profile.pug
@@ -87,10 +87,10 @@ html
                             .info-brief
                               img(src="{{ tagcomment.author.userextend.img.url }}")
                               .info-brief-right
-                                p#friend-name {{ tagcomment.author.full_name }}
+                                p#friend-name {{ tagcomment.author.userextend.full_name }}
                                 .info-brief-school
-                                  p 系所{{ tagcomment.author.school }}
-                                  p 年級{{ tagcomment.author.grade }}
+                                  p {{ tagcomment.author.userextend.department }}
+                                  p {{ tagcomment.author.userextend.grade }}
                                   {% if request.user.is_authenticated %}
                                   {% if common_friend == -1 %}
                                   p 這就是你！
@@ -99,10 +99,10 @@ html
                                   {% endif %}
                                   {% endif %}
                             {% if friend_connect %}
-                            p {{ friend.last_name }} 與他一起參與過 {{ friend_connect }} 個活動
+                            p {{ tagcomment.author.last_name }} 與他一起參與過 {{ friend_connect }} 個活動
                             //{{ user.user.last_name }}
                             {% else %}
-                            p {{ friend.last_name }} 與他還沒有一起參與過活動
+                            p {{ tagcomment.author.last_name }} 與他還沒有一起參與過活動
                             {% endif %}
                             
                         #cmttext
