add event likes subwindow, fix heroku mixed content error

--- a/templates/about_us.pug
+++ b/templates/about_us.pug
@@ -147,6 +147,11 @@ html
             p.date 21/6/23
           p.description - 修正一些魔法師都無法解決的問題
           
+          .top
+            p.version 0.0.15
+            p.date 21/6/25
+          p.description - 現在可以在留言中tag你的朋友了！（ 利用 @[名字] + 一個空格 ）
+          
           
     script(src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js")
     script(src="https://code.jquery.com/ui/1.12.1/jquery-ui.js")
