--- a/templates/eventwindow.pug
+++ b/templates/eventwindow.pug
@@ -231,6 +231,7 @@ html
       #eventlikes-window.eventsubwindow
         img#exitbtn5.exitbtn(src="{% static 'file/exiticon.png' %}")
         .eventcontainer
+          p 已按讚
           #likeslist
         
       #eventpart-window.eventsubwindow
