--- a/static/sass/eventwindow.sass
+++ b/static/sass/eventwindow.sass
@@ -561,7 +561,6 @@ input[type='button']:active
       
   #eventcontrol
     .eventcontainer
-      
       p
         font-size: 2rem
         font-weight: 600
@@ -666,6 +665,55 @@ input[type='button']:active
           background-color: var(--red)
         #end-btn
           background-color: var(--black-4);
+  #eventlikes-window
+    .eventcontainer
+      p
+        font-size: 2rem
+        font-weight: 600
+      #likeslist
+        display: flex
+        flex-direction: row
+        flex-wrap: wrap
+        align-content: flex-start
+        justify-content: space-evenly
+        height: 83%
+        overflow: auto
+        border-radius: 0 0 3rem 3rem
+        bottom: 0
+        
+        #virtual-like
+          width: calc((100% - 6 * 2 * 0.5rem) / 3 - 1rem + 2.3rem)
+          height: 0
+        
+        .like-info
+          padding: 0.5rem
+          margin: 0.5rem
+          width: calc((100% - 6 * 2 * 0.5rem) / 3 - 1rem)
+          min-height: 5.2rem
+          padding: 0.5rem;
+          border: solid var(--background-color-navbar) 0.15rem;
+          border-radius: 0.8rem;
+          box-shadow: 0.15rem 0.1rem 0.3rem 0.1rem var(--boxshadow-color);
+          .info-brief
+            display: flex
+            #info-brief-img
+              width: 3rem
+              height: 3rem
+              border-radius: 50%
+              margin-right: 0.6rem
+              
+            .info-brief-right
+              #friend-name
+                font-size: 1rem
+              .info-brief-school
+                p
+                  font-size: 0.75rem
+                #info-brief-department
+                #info-brief-grade
+                #info-brief-connectnum
+          #info-brief-relation
+          
+        
 
 #filter1
   display: none
