--- a/templates/homepage.pug
+++ b/templates/homepage.pug
@@ -267,6 +267,6 @@ html
     //-script(src="{% static 'js/jquery-3.2.1.min.js' %}")    
     script(src="https://code.jquery.com/jquery-3.2.1.min.js")
     //-script(src="{% static 'js/jquery-ui.js' %}")
-    script(src="http://code.jquery.com/ui/1.12.1/jquery-ui.js")
+    script(src="https://code.jquery.com/ui/1.12.1/jquery-ui.js")
     //-script(src="{% static 'js/semantic.min.js' %}")
     script(src="https://cdn.jsdelivr.net/semantic-ui/2.2.10/semantic.min.js")
