fix like image, add some notification condition

--- a/templates/eventwindow.pug
+++ b/templates/eventwindow.pug
@@ -237,3 +237,5 @@ html
       #eventpart-window.eventsubwindow
         img#exitbtn6.exitbtn(src="{% static 'file/exiticon.png' %}")
         .eventcontainer
+          p 已加入
+          #participantslist
