add response to notification text

--- a/static/sass/navbar.sass
+++ b/static/sass/navbar.sass
@@ -245,7 +245,7 @@ a
               #noticesendername
                 font-size: 1rem
                 font-weight: 500
-              #notice-detail
+              .notice-detail
                 font-size: 0.8rem
                 font-weight: 400
               #noticeevent
