--- a/templates/navbar.pug
+++ b/templates/navbar.pug
@@ -32,22 +32,17 @@ body
               a(href="{% url 'profile' id=noticedata.from_user.userextend.pk %}")
                 img#noticesenderpic(src="{{ noticedata.from_user.userextend.img.url }}")
               #notice-right
-                {% if noticedata.notificaition_type == 0 %}
                 #notice-righttop
                   a#noticesendername(href="{% url 'profile' id=noticedata.from_user.userextend.pk %}") {{ noticedata.from_user.userextend.full_name }}
-                  //p#notice-detail {{ noticedata.text }}
-                  p 對
-                  a#noticeevent(href="{% url 'event_detail' id=noticedata.event.pk %}") {{ noticedata.event }}
-                  p 有興趣
+                  {% if noticedata.notification_type == 0 %}
+                  a.notice-detail {{ noticedata.text }}
+                  #notice-event(style="display: none") {{ noticedata.event.id }}
+                  {% else %}
+                  a.notice-detail(href="{% url 'profile' id=noticedata.from_user.userextend.pk %}") {{ noticedata.text }}
+                  {% endif %}
                 #notice-rightbottom
                   p#notice-date {{ noticedata.date }}
-                {% else %}
-                #notice-righttop
-                  a#noticesendername(href="{% url 'profile' id=noticedata.from_user.userextend.pk %}") {{ noticedata.from_user.userextend.full_name }}
-                  p#notice-detail {{ noticedata.text }}
-                #notice-rightbottom
-                  p#notice-date {{ noticedata.date }}
-                {% endif %}
+                
             
             {% empty %}
             .notice
@@ -55,12 +50,23 @@ body
                 #notion-righttop
                   p 目前沒有通知喔～
             {% endfor %}
+            script.
+              $(document).ready(function(){
+                $(".notice-detail").on("click", function() {
+                  if ($(this).siblings("#notice-event").length > 0) {
+                    event_handler(
+                      "/event/" + $(this).siblings("#notice-event").text(),
+                      "{{ request.user.id }}",
+                      "{{ csrf_token}}",
+                    )
+                  }
+                });
+              })
         #alert-hover.hover 通知
         script.
-          $(document).ready(function(){
+          $(document).ready(function() {
             $("a#alert").on("click", function() {
               if ($("a#alert").css('background-image') != "/static/file/noticeicon.png") {
-                console.log("notice read")
                 notice_read_handler(
                   "{% url 'read_notification' %}",
                   "{{ csrf_token}}",
