modify loading alg, modify likes subwindow UI, add loading to homepage post sorting

--- a/static/sass/navbar.sass
+++ b/static/sass/navbar.sass
@@ -92,20 +92,16 @@ a
       background-size: contain
       
     .button:hover
-      //position: relative
-      //transform: scale(1.1) translate(-50%, -50%)
       opacity: 0.75
       
     #feedback:hover
-      //position: relative
-      //transform: scale(1.1) translate(-50%, -50%)
       opacity: 0.75
       
     #feedback
       background-image: url('../file/feedbackicon.png')
       width: 2.5rem
       height: 2.5rem
-      //transform: translate(-60%, -50%)
+      transform: translate(-0.2rem, 0)
     
     a
       cursor: pointer
