--- a/templates/navbar.pug
+++ b/templates/navbar.pug
@@ -96,7 +96,7 @@ body
             })
           }
       li 
-        a#message.button(href="#")
+        a#message.button
         #message-hover.hover 功能開發中
         //
           訊息
