--- a/static/sass/eventwindow.sass
+++ b/static/sass/eventwindow.sass
@@ -477,7 +477,7 @@ input[type='button']:active
       flex-direction: column
       align-items: center
       flex-wrap: nowrap
-      justify-content: space-evenly;
+      justify-content: space-around
       width: 100%
       height: 100%
       position: absolute
@@ -566,7 +566,7 @@ input[type='button']:active
         font-weight: 600
       
       #member-control-list
-        display: flex
+        display: none
         flex-direction: column;
         flex-wrap: nowrap;
         align-items: center;
@@ -677,13 +677,14 @@ input[type='button']:active
         align-content: flex-start
         justify-content: space-evenly
         height: 83%
-        overflow: auto
+        overflow-y: auto
+        overflow-x: hidden
         border-radius: 0 0 3rem 3rem
         bottom: 0
         width: 97%
         
         #virtual-like
-          width: calc((100% - 6 * 2 * 0.5rem) / 3 - 1rem + 2.3rem)
+          width: calc((100% - 6 * 2 * 0.5rem) / 3 - 1.7rem + 2.3rem)
           height: 0
         
         .like-info:hover
@@ -694,7 +695,7 @@ input[type='button']:active
         .like-info
           padding: 0.5rem
           margin: 0.5rem
-          width: calc((100% - 6 * 2 * 0.5rem) / 3 - 1rem)
+          width: calc((100% - 6 * 2 * 0.5rem) / 3 - 1.7rem)
           min-height: 5.2rem
           padding: 0.5rem;
           border: solid var(--background-color-navbar) 0.15rem;
@@ -713,10 +714,12 @@ input[type='button']:active
               
             .info-brief-right
               #friend-name
-                font-size: 1rem
+                font-size: 0.9rem
               .info-brief-school
                 p
-                  font-size: 0.75rem
+                  font-size: 0.8rem;
+                  font-weight: 500;
+                  color: var(--black-3);
                 #info-brief-department
                 #info-brief-grade
                 #info-brief-connectnum
