--- a/static/sass/homepage.sass
+++ b/static/sass/homepage.sass
@@ -337,7 +337,8 @@ footer
             overflow: hidden
             white-space: nowrap
             text-overflow: ellipsis
-            font-weight: 300
+            font-weight: 400;
+            color: var(--black-2);
             margin-bottom: 0.2rem
             
           #postcreatdate
