add navbar phone responsive

--- a/static/sass/about_us.sass
+++ b/static/sass/about_us.sass
@@ -273,16 +273,16 @@ a
   .flex-row
     margin: 0
 
-@media only screen and (max-width: 800px)
+@media only screen and (max-width: 480px)
   /* display on phone
   #group-img
-    top: 3vw
+    top: 2rem
 
   #slogan
     margin: 0 14vw
 
   #img-cards
-    top: 40%
+    top: 14rem
 
   .card
     margin-bottom: 5%
