--- a/static/sass/eventwindow.sass
+++ b/static/sass/eventwindow.sass
@@ -356,14 +356,11 @@ input[type='button']:active
         margin-bottom: 0.4rem
       
       #member
-        display: flex
-        flex-direction: column
-        flex-wrap: nowrap
-        justify-content: flex-start
-        align-items: center
-        overflow-y: auto;
-        overflow-x: hidden;
-        width: 3.5rem;
+        display: flex;
+        flex-direction: column;
+        flex-wrap: nowrap;
+        justify-content: flex-start;
+        align-items: center;
         .member
           width: 3rem
           height: 3rem
@@ -390,8 +387,6 @@ input[type='button']:active
           display: flex;
           align-items: center;
           flex-direction: column;
-          height: 11.8rem;
-          overflow: hidden;
           #lt
             font-size: 0.85rem
             color: var(--black-2)
@@ -400,8 +395,6 @@ input[type='button']:active
           display: flex;
           align-items: center;
           flex-direction: column;
-          height: 11.8rem
-          overflow: hidden;
           #mt
             font-size: 0.85rem
             color: var(--black-2)
@@ -738,3 +731,5 @@ input[type='button']:active
   -webkit-backdrop-filter: blur(5px) contrast(70%) saturate(70%) brightness(70%)
   z-index: 6
   opacity: 0
+
+
