--- a/static/sass/homepage.sass
+++ b/static/sass/homepage.sass
@@ -654,8 +654,13 @@ footer
   display: none
 
 
+//tablet responsive
+@media only screen and (max-width: 1024px)
+  #phoneerrormsg
+
+
 //phone responsive
-@media only screen and (max-width: 450px)
-  
+@media only screen and (max-width: 480px)
   #phoneerrormsg
     display: block
+    
