--- a/templates/about_us.pug
+++ b/templates/about_us.pug
@@ -1,15 +1,18 @@
 {% load static %}
 doctype html                                               
 html
-                                                     
   head
     meta(charset="utf-8")
     meta(content="width=device-width, initial-scale=1", name="viewport")                 
     title CONNECT - About Us
     link(href="{% static 'file/logo.ico' %}",rel="icon")
     {% load sass_tags %}
-    link(href="{% sass_src 'sass/about_us.sass' %}",rel="stylesheet",type="text/css")  
+    link(href="{% sass_src 'sass/about_us.sass' %}",rel="stylesheet",type="text/css")
+    link(href="{% sass_src 'sass/navbar.sass' %}",rel="stylesheet",type="text/css")
     link(href="{% sass_src 'sass/variable.sass' %}",rel="stylesheet",type="text/css")
+    script(src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js")\
+    script(src="{% static 'js/about_us.js' %}")
+    script(src="{% static 'js/navbar.js' %}")
 
   body
     {% include 'navbar.pug' %} 
@@ -153,8 +156,6 @@ html
           p.description - 現在可以在留言中tag你的朋友了！（ 利用 @[名字] + 一個空格 ）
           
           
-    script(src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js")
+    script(src="https://code.jquery.com/jquery-3.2.1.min.js")
     script(src="https://code.jquery.com/ui/1.12.1/jquery-ui.js")
-    script(src="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.2.13/semantic.min.js")
-    script(src="{% static 'js/about_us.js' %}")
-    script(src="{% static 'js/navbar.js' %}")
+    script(src="https://cdn.jsdelivr.net/semantic-ui/2.2.10/semantic.min.js")
