fix not login friend bug, add profile resposive settings

--- a/static/sass/eventwindow.sass
+++ b/static/sass/eventwindow.sass
@@ -109,7 +109,7 @@ input[type='button']:active
             margin-top: 0.2rem
             max-height: 7rem;
             overflow: auto;
-            #requiretag
+            .requiretag
               background-color: white
               border-radius: 0.6rem
               padding: 0.1rem 0.5rem
@@ -269,10 +269,10 @@ input[type='button']:active
         .eventmsg-insert
           outline: none
           border: none
-          width: 60%
+          width: 50%
           border-radius: 1rem 0 0 1rem
           background-color: var(--background-color-input)
-          padding: 0.4rem 1.3rem 0.4rem 1rem
+          padding: 0.4rem 3rem 0.4rem 1rem
           font-size: 1.1rem
           cursor: text
           margin-right: 1.7rem
