--- a/static/sass/navbar.sass
+++ b/static/sass/navbar.sass
@@ -289,6 +289,7 @@ a
 //phone responsive
 @media only screen and (max-width: 480px)
   #navbar
+    width: 100%
     #selecticon
       display: block
       width: 2.5rem
