fix url regular expression

--- a/static/sass/profile.sass
+++ b/static/sass/profile.sass
@@ -908,6 +908,9 @@ footer
     #top-region
       #intro
         flex-direction: column
+        #user-img
+          width: 10rem
+          height: 10rem
       #description-tag
         width: 100%
     #bottom-region
@@ -936,14 +939,16 @@ footer
   #profileall
     width: 100%
     margin-bottom: 1rem
-    #intro
-      margin-top: 1.5rem
     #profilepanel
       width: 95%
       margin: 5vh 5vh 1rem 5vh
+      #user-img
+        width: 5rem
+        height: 5rem
       #top-region
         #intro
           flex-direction: column
+          margin-top: 1.5rem
           #info
             #user-img
               width: 30vw
