--- a/templates/login.pug
+++ b/templates/login.pug
@@ -13,7 +13,7 @@ html
     //-script(src="{% static 'js/jquery-3.2.1.min.js' %}")
     script(src="https://code.jquery.com/jquery-3.2.1.min.js")
     //-script(src="{% static 'js/jquery-ui.js' %}")
-    script(src="http://code.jquery.com/ui/1.12.1/jquery-ui.js")
+    script(src="https://code.jquery.com/ui/1.12.1/jquery-ui.js")
     script(src="https://cdn.jsdelivr.net/npm/sweetalert2@11")
     script(src="{% static 'js/login.js' %}")
   {% include 'navbar.pug' %}
