--- a/templates/profile.pug
+++ b/templates/profile.pug
@@ -14,7 +14,7 @@ html
     //-script(src="{% static 'js/jquery-3.2.1.min.js' %}")
     script(src="https://code.jquery.com/jquery-3.2.1.min.js")
     //-script(src="{% static 'js/jquery-ui.js' %}")
-    script(src="http://code.jquery.com/ui/1.12.1/jquery-ui.js")
+    script(src="https://code.jquery.com/ui/1.12.1/jquery-ui.js")
     //-script(src="{% static 'js/d3.v5.js' %}")
     script(src="https://d3js.org/d3.v5.js")
     //-script(src="{% static 'js/sweetalert2@11.js' %}")
