--- a/static/sass/homepage.sass
+++ b/static/sass/homepage.sass
@@ -14,20 +14,6 @@ a
   text-decoration: none
   color: black
 
-footer
-  height: 5vh
-  background-color: var(--background-color-navbar)
-  display: flex
-  flex-direction: row
-  justify-content: space-around
-  align-items: center
-  flex-wrap: nowrap
-  //left: -50%
-  //padding-bottom: 1vh
-  width: 100%
-  p
-    font-size: 1vw
-
 #loading
   display: block
   position: fixed
@@ -341,6 +327,9 @@ footer
             color: var(--black-2);
             margin-bottom: 0.2rem
             
+          #post_detail
+            display: none
+            
           #postcreatdate
             font-size: 0.8rem
             color: var(--fontcolor-second)
@@ -492,7 +481,7 @@ footer
     display: flex
     flex-direction: column
     justify-content: flex-start
-    padding: 0 2rem 2rem 2rem
+    padding: 0 2rem
     flex-wrap: nowrap
     align-items: stretch
     label
@@ -553,7 +542,7 @@ footer
       outline: none
       border: none
       font-size: 1rem
-      height: 8rem
+      height: 10vh
     textarea:focus
       border: 2px solid var(--border-color-input-focus)
     
@@ -581,9 +570,10 @@ footer
       background-color: white
       border-radius: 1rem
       color: var(--fontcolor-placeholder)
-      overflow-x: scroll
-      overflow-y: visible
+      overflow-x: hidden
+      overflow-y: auto
       max-height: 8rem
+      margin-bottom: 0.5rem;
       
       #requiretitle
         border-radius: 1rem
@@ -625,23 +615,25 @@ footer
   
       
   #buttons
-    position: absolute
-    transform: translate(-50%, 0)
-    height: 5rem
-    width: 5rem
+    position: relative
+    transform: translate(-50%, 100%)
+    height: 2.5rem
+    width: 100%
     left: 50%
     right: 3.2rem
     bottom: 1.5rem
     #submit-btn
-      width: 100%
+      position: absolute
+      left: 50%
       background: none
+      transform: translate(-50%, 0)
       height: auto
+      width: 5rem
       font-size: 1rem
       background-color: var(--background-color-button)
       border-radius: 1rem
       padding: 0.5rem 1.2rem
       text-align: center
-      margin-top: 2.5rem
       border: solid 2px var(--background-color-button)
     #submit-btn:hover
       background-color: var(--background-color-button-hover)
@@ -662,5 +654,80 @@ footer
 //phone responsive
 @media only screen and (max-width: 480px)
   #phoneerrormsg
-    display: block
+    display: none
+  #container
+    width: 90%
+    
+    #board
+      #divider
+        justify-content: center;
+        #line2
+          width: 0
+      #eventboard
+        margin-bottom: 2rem
+        a
+          margin: 1.45rem 1.45rem 0 1.45rem
+        .eventpost
+          .posttop
+            min-height: 5rem
+            height: auto
+            #post_title
+              width: 103%
+            #post_subtitle
+              font-size: 1rem
+              width: 95%
+            #post_detail
+              display: block
+              font-size: 0.8rem
+              width: 97%
+              font-weight: 300;
+              color: var(--black-2);
+              margin-bottom: 0.2rem
+              line-height: 1.1rem
+              height: 3.3rem;
+              overflow: hidden;
+              
+            #postimgs
+              width: 100%
+              height: 13rem
+            
+  #eventcreatewindow
+    width: 96%
+    //max-height: 90%;
+    overflow: auto;
+    
+    form
+      margin-bottom: 0.7rem;
+      input[type=text]
+        font-size: 0.9rem
+      textarea
+        font-size: 0.9rem
+      input[type=number]
+        font-size: 0.9rem
+      #requirements
+        max-height: 6rem
+        p
+          font-size: 0.9rem
+        input
+          font-size: 0.9rem
+      select
+        font-size: 0.9rem
+      input[type=file]
+        font-size: 0.9rem
+        
+      #id_title
+        heightL 2.3rem
+      #id_subtitle
+        heightL 1.7rem
+        
+        
+    #buttons
+      bottom: -1.5rem
+      position: relative
+      transform: translate(-50%, -40%)
+      #createevent
+        padding: 1.5rem 1rem 2rem 1rem
+      
+      #submit-btn
+        margin-top: 0
     
