modify PWA for better practice, modify some profile UI

--- a/static/sass/variable.sass
+++ b/static/sass/variable.sass
@@ -37,7 +37,7 @@
   //gobal
 
   --font-family-header: "Noto Sans TC", "PingFang TC", "Microsoft JhengHei", "Tahoma", "Arial"
-  --font-style-header: normal
+  --font-style-header: italic
   --font-family-text: "Noto Sans TC", "PingFang TC", "Microsoft JhengHei", "Tahoma", "Arial"
   --font-style-text: normal
   --font-family-card: "Noto Sans TC", "PingFang TC", "Microsoft JhengHei", "Tahoma", "Arial"
