--- a/static/sass/profile.sass
+++ b/static/sass/profile.sass
@@ -335,7 +335,7 @@ footer
               background-color: var(--background-color-userpic)
               //margin: 0rem 1rem 1rem 1rem
               border-radius: 0.75rem
-              max-height: 40vh
+              max-height: 50%
               overflow: auto
               
               .tagcmt-wrap
@@ -832,7 +832,7 @@ footer
               border-radius: 0.5rem
               background-color: var(--background-color-input-hover)
               padding: 0.5rem
-              
+              margin-bottom: 0.3rem
               a
                 margin: 0
               
@@ -864,8 +864,8 @@ footer
                   
                   
                   #eventcomment-sendername
-                    font-size: 1.05rem
-                    width: 4rem
+                    font-size: 0.9rem
+                    width: 8rem
                     font-weight: 500
                   #event-date
                     font-size: 0.7rem
@@ -874,7 +874,7 @@ footer
                     text-align: right
                     
                 #eventcommenttext
-                  font-size: 1rem
+                  font-size: 0.85rem
                   color: #595959
 
       @media only screen and (max-width:1350px)
@@ -956,6 +956,10 @@ footer
       #bottom-region
         #left-pane
           width: calc(100% - 2rem)
+        .comments
+          max-height: 20vh
+        .info
+          margin-bottom: 0.5rem
 
   *
     font-size: 80%
