add search to homepage in responsive UI

--- a/static/sass/navbar.sass
+++ b/static/sass/navbar.sass
@@ -333,7 +333,6 @@ footer
         #feedback-hover
           display: none
         #alert
-        
           display: none
           transform: translate(-50%, calc(7rem - 100%))
         #alert-hover
@@ -354,7 +353,8 @@ footer
           height: 3.5rem;
         #aboutus-hover
           display: none
-        
+        #notificationboard
+          margin-top: 6.5rem
         
       li:nth-child(1)
         left: 20%
@@ -368,7 +368,7 @@ footer
         position: static
         transform: translate(0, 0)
         #profile
-      
+  
   footer
     height: auto
     flex-direction: column
