--- a/static/sass/homepage.sass
+++ b/static/sass/homepage.sass
@@ -99,7 +99,8 @@ a
       width: 6rem
       height: 6rem
       border-radius: 50%
-    
+    form
+      display: none
     #userpic
       //position: absolute
       margin-left: 2%
@@ -657,7 +658,39 @@ a
     display: none
   #container
     width: 90%
-    
+    #create
+      a
+        display: none
+      form
+        display: flex
+        flex-direction: row
+        input[type="image"]
+          z-index: 1
+          transform: translateX(1rem)
+        input[type="text"]
+          position: relative
+          width: 11rem
+          transform: translateX(-1rem)
+          padding-left: 2.5rem
+          border-radius: 1rem
+          outline: none
+          border: solid 1px var(--border-color-frame)
+          z-index: 0
+      #insertbox
+        width: 2.5rem
+        height: 2.5rem
+        border-radius: 50%
+        padding-left: 0.8rem
+        background-image: url('../file/add-event.png')
+        #add-text
+          display: none
+        #insertbar
+          visibility: hidden
+
+    .search-info
+      display: none
+    hr
+      display: none
     #board
       #divider
         justify-content: center;
