--- a/templates/homepage.pug
+++ b/templates/homepage.pug
@@ -38,7 +38,11 @@ html
         
         a(href="{% url 'profile' id=request.user.userextend.pk %}")
           img#userpic(src="{{ request.user.userextend.img.url }}")
-        button#insertbox 發起活動？
+        form#search-form(action="{% url 'search' %}", method="GET")
+          input#search-btn(type="image", src="{% static 'file/search-bg.png' %}" alt="submit")
+          input#search-insert(type="text", placeholder="Search", name="search")
+        button#insertbox 
+          p#add-text 發起活動？
           p#insertbar |
         
         {% else %}
