modify responsive, icon bg color

--- a/static/sass/navbar.sass
+++ b/static/sass/navbar.sass
@@ -336,15 +336,13 @@ footer
           display: none
           transform: translate(-50%, calc(7rem - 100%))
         #alert-hover
-          display: none
         #message
           background-image: url('../file/msgicon-wd.png')
           display: none
           transform: translate(-50%, calc(7rem - 100%))
           width: 3.5rem;
           height: 3.5rem;
-        #meswage-hover
-          display: none
+        #message-hover
         #aboutus
           background-image: url('../file/groupicon-wd-bg.png')
           display: none
@@ -352,7 +350,6 @@ footer
           width: 3.5rem;
           height: 3.5rem;
         #aboutus-hover
-          display: none
         #notificationboard
           margin-top: 6.5rem
         
@@ -368,7 +365,10 @@ footer
         position: static
         transform: translate(0, 0)
         #profile
-  
+  #gotop
+    right: 1.5rem;
+    width: 4rem;
+    height: 4rem;
   footer
     height: auto
     flex-direction: column
