--- a/static/sass/homepage.sass
+++ b/static/sass/homepage.sass
@@ -717,7 +717,9 @@ a
               color: var(--black-2);
               margin-bottom: 0.2rem
               line-height: 1.1rem
-              height: 3.3rem;
+              height: 1.1rem
+              min-height: 1.1rem;
+              max-height: 3.3rem;
               overflow: hidden;
               
             #postimgs
