--- a/static/sass/profile.sass
+++ b/static/sass/profile.sass
@@ -814,7 +814,7 @@ footer
             max-height: 20vw
             margin-bottom: 1rem
 
-            overflow: scroll
+            overflow: auto
             overflow-x: hidden
             //overflow-scrolling: touch
             //-webkit-overflow-scrolling: touch
@@ -938,7 +938,6 @@ footer
     display: none
   #profileall
     width: 100%
-    margin-bottom: 1rem
     #profilepanel
       width: 95%
       margin: 5vh 5vh 1rem 5vh
