add screen zoom lock and some pwa setting to html meta

--- a/static/sass/homepage.sass
+++ b/static/sass/homepage.sass
@@ -197,7 +197,7 @@ a
         padding: 0.1rem 0.7rem
         outline: none
         margin: 0 0.5rem
-        
+        background-color: transparent;
     #eventboard
       display: flex
       flex-direction: row
