--- a/templates/about_us.pug
+++ b/templates/about_us.pug
@@ -5,7 +5,10 @@ html
   head
     {% progressive_web_app_meta %}
     meta(charset="utf-8")
-    meta(content="width=device-width, initial-scale=1", name="viewport")                 
+    meta(content="width=device-width, initial-scale=1", name="viewport")
+    meta(name="apple-mobile-web-app-capable" content="yes")
+    meta(name="apple-mobile-web-app-status-bar-style" content="black-translucent")
+    meta(name="viewport" content="viewport-fit=cover, user-scalable=no, width=device-width, initial-scale=1, maximum-scale=1")
     title CONNECT - About Us
     link(href="{% static 'file/logo.ico' %}",rel="icon")
     {% load sass_tags %}
