--- a/templates/profile_edit.pug
+++ b/templates/profile_edit.pug
@@ -4,6 +4,9 @@ html
   head
     meta(charset="utf-8")
     meta(content="width=device-width, initial-scale=1", name="viewport")
+    meta(name="apple-mobile-web-app-capable" content="yes")
+    meta(name="apple-mobile-web-app-status-bar-style" content="black-translucent")
+    meta(name="viewport" content="viewport-fit=cover, user-scalable=no, width=device-width, initial-scale=1, maximum-scale=1")
     title CONNECT - Profile
     link(href="{% static 'file/logo.ico' %}",rel="icon")
     {% load sass_tags %}
